--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 <body>
 
     <div class="main">
+      <div class="piano">
+        <div class="piano__panel"></div>
+        <div class="piano__redLine"></div>
+      </div>
     </div>
 
 </body>
