--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <div class="main">
+      <div class="musicStaff"></div>
       <div class="piano">
         <div class="piano__panel"></div>
         <div class="piano__redLine"></div>
