fix class Piano

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
 </head>
 <body>
 
-    <div class="main">
-      <div class="piano">
-        <div class="piano__panel"></div>
-        <div class="piano__redLine"></div>
-      </div>
+    <div class="app">
     </div>
 
 </body>
